alignment fix for sidebar widget text

--- a/bookface_dark.css
+++ b/bookface_dark.css
@@ -828,6 +828,10 @@ ul.tabs li {
 	aside .badge {
 		background-color: var(--link-color);
 	}
+	aside .widget button.fakelink {
+		width: 100%;
+		text-align: left;
+	}
 	/* 	Contributed by Matthias (feb@loma.ml):
 		Widgets mit einem Icon versehen
 		Gemeinsame Basisregeln für alle Sidebar-Icons */	
